# rtos-backend

./: .env.example  README.md  main.py  pyproject.toml
app/: agent.py  agent_executor.py  calendar_client.py  stt.py  tts.py  voice_input.py
app/config/: settings.py
app/models/: calendar_models.py  stream_models.py
app/tools/: calendar_tools.py  web_search_tools.py
app/utils/: enums.py
